[tool.poetry]
name = "caesar"
version = "0.1.0"
description = ""
authors = ["Jason Klueber <jason.klueber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.7.0"
pytest = "^7.4.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
